--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
             <div class="container">
                 <div class="empty">
                     <h2>Lorem ipsum dolor sit amet consectetur</h2>
-                    <img src="../images/little-lemon1.jpg" alt="">
+                    <img src="images/little-lemon1.jpg" alt="">
                 </div>
                 <div>
                     <h2>Lorem ipsum dolor sit amet consectetur</h2>
-                    <img src="../images/little-lemon1.jpg" alt="">
+                    <img src="images/little-lemon1.jpg" alt="">
                 </div>
                 <div>
                     <h2>Lorem ipsum dolor, sit amet consectetur</h2>
-                    <img src="../images/little-lemon2.jpg" alt="">
+                    <img src="images/little-lemon2.jpg" alt="">
                 </div>
                 <div>
                     <h2>Lorem ipsum dolor sit amet consectetur</h2>
-                    <img src="../images/little-lemon3.jpg" alt="">
+                    <img src="images/little-lemon3.jpg" alt="">
                 </div>
                 <div>
                     <h2>Lorem ipsum dolor sit amet consectetur</h2>
-                    <img src="../images/little-lemon4.jpg" alt="">
+                    <img src="images/little-lemon4.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -59,26 +59,26 @@
             <p>Our Menu contains a wide variety of cuisine raging from Indian cuisine, Italian cuisine to Chinese cuisine and French cuisine</p>
         </div>
             <div class="product">
-                <img src="../images/little-lemon5.jpg" alt="">
+                <img src="images/little-lemon5.jpg" alt="">
                 <h3>Lorem, ipsum.</h3>
                 <p>Price: $18</p>
                 <button>Add to cart</button>
             </div>
             <div class="product">
-                <img src="../images/little-lemon6.jpg" alt="">
+                <img src="images/little-lemon6.jpg" alt="">
                 <h3>Lorem, ipsum.</h3>
                 <p>Price: $18</p>
                 <button>Add to cart</button>
                 <span class="tag">New</span>
             </div>
             <div class="product">
-                <img src="../images/little-lemon7.jpg" alt="">
+                <img src="images/little-lemon7.jpg" alt="">
                 <h3>Lorem, ipsum.</h3>
                 <p>Price: $18</p>
                 <button>Add to cart</button>
             </div>
             <div class="product">
-                <img src="../images/little-lemon8.jpg" alt="">
+                <img src="images/little-lemon8.jpg" alt="">
                 <h3>Lorem, ipsum.</h3>
                 <p>Price: $18</p>
                 <button>Add to cart</button>
