--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Little Lemon Restaurant">
     <meta name="og:name" property="Lettle Lemon Restaurant">
     <meta name="og:url" property="https://www.little-lemon-restaurant">
-    <meta name="og:description" property="This is a final project for a little lemon restaurant which is part of the meta frontend certification">
+    <!--<meta name="og:description" property="This is a final project for a little lemon restaurant which is part of the meta frontend certification">-->
     <meta name="og:img" property="Little-Lemon-logos/Asset 14@4x.png">
     <title>Little Lemon Restaurant | Home page</title>
     <link rel="stylesheet" href="style.css">
