--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="description" content="This is a final project for a little lemon restaurant which is part of the meta frontend certification">
     <meta name="author" content="David Content">
     <meta name="title" content="Little Lemon Restaurant">
-    <meta name="og:name" property="Lettle Lemon Restaurant">
-    <meta name="og:url" property="https://www.little-lemon-restaurant">
-    <!--<meta name="og:description" property="This is a final project for a little lemon restaurant which is part of the meta frontend certification">-->
-    <meta name="og:img" property="Little-Lemon-logos/Asset 14@4x.png">
+    <meta property="og:name" content="Lettle Lemon Restaurant">
+    <meta property="og:url" content="https://www.little-lemon-restaurant.com">
+    <meta property="og:description" content="This is a final project for a little lemon restaurant which is part of the meta frontend certification">
+    <meta property="og:imgage" content="Little-Lemon-logos/Asset 14@4x.png">
     <title>Little Lemon Restaurant | Home page</title>
     <link rel="stylesheet" href="style.css">
 </head>
