--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <meta name="description" content="This is a final project for a little lemon restaurant which is part of the meta frontend certification">
     <meta name="author" content="David Content">
     <meta name="title" content="Little Lemon Restaurant">
-    <meta property="og:name" content="Lettle Lemon Restaurant">
+    
     <meta property="og:url" content="https://www.little-lemon-restaurant.com">
+    <meta property="go:title" content="Little Lemon Resturant">
+    <meta property="og:image" content="Little-Lemon-logos/Asset 14@4x.png">
+    <meta property="og:type" content="website">
     <meta property="og:description" content="This is a final project for a little lemon restaurant which is part of the meta frontend certification">
-    <meta property="og:imgage" content="Little-Lemon-logos/Asset 14@4x.png">
+    <meta property="og:site_name" content="Our Menu">
     <title>Little Lemon Restaurant | Home page</title>
     <link rel="stylesheet" href="style.css">
 </head>
